@@ -578,10 +578,10 @@ def test_image_in_section(app, status, warning):
     print(status.getvalue())
     print(warning.getvalue())
     assert ('\\chapter[Test section]'
-            '{\\sphinxincludegraphics[width=15pt,height=15pt]{{pic}.png} Test section}'
+            '{\\sphinxincludegraphics[width=15bp,height=15bp]{{pic}.png} Test section}'
             in result)
     assert ('\\chapter[Other {[}blah{]} section]{Other {[}blah{]} '
-            '\\sphinxincludegraphics[width=15pt,height=15pt]{{pic}.png} section}' in result)
+            '\\sphinxincludegraphics[width=15bp,height=15bp]{{pic}.png} section}' in result)
     assert ('\\chapter{Another section}' in result)
 
 
